--- a/index.html
+++ b/index.html
@@ -4,18 +4,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Google News</title>
+    <title>Quack - Social Network</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/a8c4c24db6.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
-    <textarea type="text" placeholder="Input tweet" id="input"></textarea>
-    <button id="btn-post" onclick="post()">Tweet</button>
-    <div id="remain">
-
-    </div>
-
+    <textarea type="text" placeholder="What's quackin'?" id="input"></textarea>
+    <button id="btn-post" onclick="post()">Quack</button>
+    <div id="remain"></div>
+    <div id="quackArea"></div>
     <script src="javascript.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.25.3/moment.min.js"></script>
 
