--- a/index.html
+++ b/index.html
@@ -55,14 +55,18 @@
             </div>
         </div>
         <div id="quackColumn">
-            <textarea type="text" placeholder="What's quackin'?" id="input"></textarea>
-            <div>
-                <button id="btn-post" onclick="post()" class="qButton">Quack</button>
-                <span id="remain"></span>
+            <div class="container">
+                <div class="quack-input" id="quack-input">
+
+
+                </div>
+
+                <div id="quackArea"></div>
             </div>
-            <div id="quackArea"></div>
+
         </div>
         <div id="rightColumn">
+            <span id="username"></span>
             <input type="text" class="searchBar" placeholder="Search...">
             <div id="whoToFollow" class="rightFormat">
                 <div>
@@ -98,12 +102,10 @@
             </div>
             <div id="trending" class="rightFormat">
                 <h4>Trending</h4>
-                <p class="hashFont">#CoderSchool</p>
-                <p class="qNum">320K Quacks</p>
-                <p class="hashFont">#Bitna</p>
-                <p class="qNum">179 Quacks</p>
-                <p class="hashFont">#Mojave</p>
-                <p class="qNum">5,864 Quacks</p>
+                <div id="trending-section">
+
+                </div>
+
             </div>
         </div>
     </div>
