--- a/index.html
+++ b/index.html
@@ -13,7 +13,12 @@
 </head>
 
 <body>
+    <div class="body-change" id="body-change">
+
+    </div>
     <div id="entireWebpage">
+        <div class="change-account" id="change-account">
+        </div>
         <div id="left-column">
             <div class="logoRow logo-area">
                 <img src="images/Quack-Logo.png" width="80px" height="80px" class="logo">
