--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
     </div>
     <div id="entireWebpage">
         <div class="change-account" id="change-account">
+            <i class="fas fa-window-close" id="close-btn"></i>
+            <div id="account-section">
+
+            </div>
         </div>
         <div id="left-column">
             <div class="logoRow logo-area">
