add edit function

--- a/index.html
+++ b/index.html
@@ -23,6 +23,13 @@
 
             </div>
         </div>
+        <div class="change-account" id="edit-window">
+            <h3>Edit Your Post</h3>
+            <i class="fas fa-window-close" id="close-btn-edit"></i>
+            <textarea id="edit-input"></textarea>
+            <i class="fas fa-save fa-lg iconFormat save-edit" onclick="saveEditQuack()"></i>
+
+        </div>
         <div id="left-column">
             <div class="logoRow logo-area">
                 <img src="images/Quack-Logo.png" width="80px" height="80px" class="logo">
