--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
         </div>
         <div id="rightColumn">
-            <span id="username"></span>
+            <div id="username"></div>
             <input type="text" class="searchBar" placeholder="Search...">
             <div id="whoToFollow" class="rightFormat">
                 <div>
@@ -125,6 +125,7 @@
             </div>
         </div>
     </div>
+    <footer>Made with ❤️ by Hai Bao Tran and Alyssa Bao</footer>
     <script src="javascript.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.25.3/moment.min.js"></script>
 
