--- a/index.html
+++ b/index.html
@@ -32,13 +32,13 @@
         </div>
         <div id="left-column">
             <div class="logoRow logo-area">
-                <img src="images/Quack-Logo.png" width="80px" height="80px" class="logo">
-                <h3>Quack</h3>
+                <img onclick="returnHome()" src="images/Quack-Logo.png" width="80px" height="80px" class="logo">
+                <h3 onclick="returnHome()">Quack</h3>
             </div>
             <div id="navbar">
                 <div class="row">
-                    <i class="fas fa-home fa-2x icon" style="color:#4b5aad"></i>
-                    <h2>Home</h2>
+                    <i onclick="returnHome()" class="fas fa-home fa-2x icon" style="color:#4b5aad"></i>
+                    <h2 onclick="returnHome()">Home</h2>
                 </div>
                 <div class="row">
                     <i class="fas fa-globe fa-2x icon" style="color:#6f5cae"></i>
